<resources>
    <string name="app_name" translatable="false">Einzelabgabe</string>
    <string name="button_send" translatable="false">Abschicken</string>
    <string name="button_calculate" translatable="false">Berechne 4</string>
    <string name="edit_message" translatable="false">Matrikelnummer</string>
    <string name="heading1">Gib deine Matrikelnummer ein</string>
    <string name="answerServer"> </string>
    <string name="heading2">Anwort des Servers:</string>
    <string name="heading3">Quersumme als Binärzahl</string>
    <string name="output"> </string>
</resources>